adicao dependencia mapStruct e ajustes